--- a/thoth-black/Dockerfile
+++ b/thoth-black/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/aicoe/thoth-python36:latest
+FROM quay.io/aicoe/thoth-python36:fedora28
 
 ENV SUMMARY="Thoth's toolchain for Black." \
     DESCRIPTION="Thoth's toolchain for Black."
@@ -6,9 +6,9 @@ ENV SUMMARY="Thoth's toolchain for Black." \
 LABEL summary="$SUMMARY" \
       description="$DESCRIPTION" \
       io.k8s.description="$DESCRIPTION" \
-      io.k8s.display-name="Thoth Python 3.6 Black" \
+      io.k8s.display-name="Thoth Python 3.6-fedora28 Black" \
       io.openshift.tags="python,python36,black" \
-      name="thoth-station/thoth-black"
+      name="thoth-station/thoth-black:fedora28"
 
 USER 0
 COPY ./ /tmp/src-thoth-coala
