--- a/thoth-coala/Dockerfile
+++ b/thoth-coala/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/aicoe/thoth-python36:latest
+FROM quay.io/aicoe/thoth-python36:fedora28
 
 ENV SUMMARY="Thoth's toolchain for Coala linting." \
     DESCRIPTION="Thoth's toolchain for Coala linting."
@@ -6,9 +6,9 @@ ENV SUMMARY="Thoth's toolchain for Coala linting." \
 LABEL summary="$SUMMARY" \
       description="$DESCRIPTION" \
       io.k8s.description="$DESCRIPTION" \
-      io.k8s.display-name="Thoth Python 3.6 Coala" \
+      io.k8s.display-name="Thoth Python 3.6-fedora28 Coala" \
       io.openshift.tags="python,python36,coala" \
-      name="thoth-station/thoth-coala"
+      name="thoth-station/thoth-coala:fedora28"
 
 USER 0
 COPY ./ /tmp/src-thoth-coala
