--- a/thoth-python36/Dockerfile
+++ b/thoth-python36/Dockerfile
@@ -18,9 +18,9 @@ LABEL summary="$SUMMARY" \
       io.k8s.display-name="Thoth Python 3.6" \
       io.openshift.expose-services="8080:http" \
       io.openshift.tags="python,python36" \
-      name="thoth-station/thoth-python36" \
+      name="thoth-station/thoth-python36:fedora28" \
       vendor="AICoE at the Office of the CTO, Red Hat Inc." \
-      version="0.6.0" \
+      version="0.7.0" \
       release="0" \
       usage="This is not a S2I builder image!" \
       maintainer="Christoph Görn <goern@redhat.com>"
