:sparkles: updated to latest base image
Signed-off-by: Christoph Görn <goern@redhat.com>

--- a/thoth-python36-ubi8/Dockerfile
+++ b/thoth-python36-ubi8/Dockerfile
@@ -1,4 +1,4 @@
-FROM registry.access.redhat.com/ubi8/python-36:1-24
+FROM registry.access.redhat.com/ubi8/python-36:1-28
 
 ENV SUMMARY="Thoth's toolchain for Python ${PYTHON_VERSION} applications" \
     DESCRIPTION="Thoth's toolchain for Python ${PYTHON_VERSION} applications. This toolchain is based on Red Hat UBI8. It includes pipenv." \
@@ -17,7 +17,7 @@ LABEL summary="$SUMMARY" \
       io.k8s.display-name="Thoth Python 3.6-ubi8" \
       io.openshift.expose-services="8080:http" \
       io.openshift.tags="python,python36" \
-      name="thoth-station/thoth-python36:ubi8" \
+      name="thoth-station/thoth-python36:v0.7.0-ubi8" \
       vendor="AICoE at the Office of the CTO, Red Hat Inc." \
       version="0.7.0" \
       release="0" \
