--- a/thoth-pytest-ubi8/requirements.txt
+++ b/thoth-pytest-ubi8/requirements.txt
@@ -2,9 +2,14 @@
 atomicwrites==1.3.0
 attrs==19.1.0
 coverage==4.5.3
-more-itertools==7.0.0 ; python_version > '2.7'
-pluggy==0.9.0
+importlib-metadata==0.18
+more-itertools==7.1.0 ; python_version > '2.7'
+packaging==19.0
+pluggy==0.12.0
 py==1.8.0
-pytest-cov==2.6.1
-pytest==4.4.1
+pyparsing==2.4.0
+pytest-cov==2.7.1
+pytest==4.6.3
 six==1.12.0
+wcwidth==0.1.7
+zipp==0.5.1
