:sparkles: added a coala wrapper script
Signed-off-by: Christoph Görn <goern@redhat.com>

--- a/thoth-coala-ubi8/Dockerfile
+++ b/thoth-coala-ubi8/Dockerfile
@@ -12,6 +12,10 @@ LABEL summary="$SUMMARY" \
 
 USER 0
 COPY ./ /tmp/src-thoth-coala
+COPY ./root/ /
+
 RUN pip3 install --requirement /tmp/src-thoth-coala/requirements.txt
 
 USER ${USERID}
+
+ENTRYPOINT /usr/bin/thoth-coala
