--- a/thoth-black-ubi8/Dockerfile
+++ b/thoth-black-ubi8/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/aicoe/thoth-python36:ubi8
+FROM quay.io/thoth-station/s2i-thoth-ubi8-py36:v0.1.0
 
 ENV SUMMARY="Thoth's toolchain for Black." \
     DESCRIPTION="Thoth's toolchain for Black."
@@ -8,7 +8,8 @@ LABEL summary="$SUMMARY" \
       io.k8s.description="$DESCRIPTION" \
       io.k8s.display-name="Thoth Python 3.6-ubi8 Black" \
       io.openshift.tags="python,python36,black" \
-      name="thoth-station/thoth-black:ubi8"
+      name="thoth-station/thoth-black:ubi8" \
+      version="0.9.0"
 
 USER 0
 COPY ./ /tmp/src-thoth-coala
