--- a/thoth-pylint-ubi8/requirements.txt
+++ b/thoth-pylint-ubi8/requirements.txt
@@ -1,9 +1,5 @@
 -i https://pypi.org/simple
-astroid==2.2.5
-isort==4.3.21
-lazy-object-proxy==1.4.1
-mccabe==0.6.1
-pylint==2.3.1
-six==1.12.0
-typed-ast==1.4.0 ; implementation_name == 'cpython'
-wrapt==1.11.2
+mypy-extensions==0.4.1
+mypy==0.720
+typed-ast==1.4.0
+typing-extensions==3.7.4
