removed unused parts, updated OpenShift templates
Signed-off-by: Christoph Görn <goern@redhat.com>

--- a/openshift/buildConfig-template.yaml
+++ b/openshift/buildConfig-template.yaml
@@ -5,8 +5,8 @@ metadata:
   annotations:
     description: >
       These are the BuildConfigs used to build the container images for Zuul to run Pod based Jobs.
-    openshift.io/display-name: 'Thoth Zuul Infrastructure'
-    version: 0.7.0
+    openshift.io/display-name: "Thoth Zuul Infrastructure"
+    version: 0.9.0
     tags: thoth,zuul-zuul-ci,ai-stacks,aistacks
     template.openshift.io/documentation-url: https://github.com/Thoth-Station/
     template.openshift.io/long-description: >
@@ -22,119 +22,15 @@ parameters:
     displayName: Thoth's Zuul Infrastructure git repository
     required: true
     name: GITHUB_URL
-    value: 'https://github.com/thoth-station/zuul-infra'
+    value: "https://github.com/thoth-station/zuul-infra"
 
   - description: Git reference to be used within zuul-infra
     displayName: Thoth's Zuul Infrastructure git reference
     required: true
     name: GITHUB_REF
-    value: 'master'
+    value: "master"
 
 objects:
-  - kind: BuildConfig
-    apiVersion: v1
-    metadata:
-      labels:
-        app: "zuul"
-        component: "infrastructure"
-      name: "thoth-python36-fedora28"
-    spec:
-      resources:
-        requests:
-          memory: "1Gi"
-          cpu: "1"
-        limits:
-          memory: "1Gi"
-          cpu: "1"
-      output:
-        to:
-          kind: ImageStreamTag
-          name: "thoth-python36:fedora28"
-      runPolicy: Serial
-      source:
-        type: Git
-        git:
-          uri: "${GITHUB_URL}"
-          ref: ${GITHUB_REF}
-        contextDir: "thoth-python36"
-      strategy:
-        type: Docker
-        dockerStrategy:
-          dockerfilePath: Dockerfile
-      triggers:
-        - type: ImageChange
-          imageChange: {}
-
-  - kind: BuildConfig
-    apiVersion: v1
-    metadata:
-      labels:
-        app: "zuul"
-        component: "infrastructure"
-      name: "thoth-python36-ubi8"
-    spec:
-      resources:
-        requests:
-          memory: "1Gi"
-          cpu: "1"
-        limits:
-          memory: "1Gi"
-          cpu: "1"
-      output:
-        to:
-          kind: ImageStreamTag
-          name: "thoth-python36:ubi8"
-      runPolicy: Serial
-      source:
-        type: Git
-        git:
-          uri: "${GITHUB_URL}"
-          ref: ${GITHUB_REF}
-        contextDir: "thoth-python36-ubi8"
-      strategy:
-        type: Docker
-        dockerStrategy:
-          dockerfilePath: Dockerfile
-      triggers:
-        - type: ImageChange
-          imageChange: {}
-
-  - kind: BuildConfig
-    apiVersion: v1
-    metadata:
-      labels:
-        app: "zuul"
-        component: "infrastructure"
-      name: "thoth-coala-fedora28"
-    spec:
-      resources:
-        requests:
-          memory: "1Gi"
-          cpu: "1"
-        limits:
-          memory: "1Gi"
-          cpu: "1"
-      output:
-        to:
-          kind: ImageStreamTag
-          name: "thoth-coala:fedora28"
-      source:
-        type: Git
-        git:
-          uri: "${GITHUB_URL}"
-          ref: ${GITHUB_REF}
-        contextDir: "thoth-coala"
-      strategy:
-        type: Docker
-        dockerStrategy:
-          dockerfilePath: Dockerfile
-          from:
-            kind: "ImageStreamTag"
-            name: "thoth-python36:fedora28"
-      triggers:
-        - type: ImageChange
-          imageChange: {}
-
   - kind: BuildConfig
     apiVersion: v1
     metadata:
@@ -166,44 +62,7 @@ objects:
           dockerfilePath: Dockerfile
           from:
             kind: "ImageStreamTag"
-            name: "thoth-python36:ubi8"
-      triggers:
-        - type: ImageChange
-          imageChange: {}
-
-  - kind: BuildConfig
-    apiVersion: v1
-    metadata:
-      labels:
-        app: "zuul"
-        component: "infrastructure"
-      name: "thoth-pylint-fedora28"
-    spec:
-      resources:
-        requests:
-          memory: "1Gi"
-          cpu: "1"
-        limits:
-          memory: "1Gi"
-          cpu: "1"
-      output:
-        to:
-          kind: ImageStreamTag
-          name: "thoth-pylint:fedora28"
-      runPolicy: Serial
-      source:
-        type: Git
-        git:
-          uri: "${GITHUB_URL}"
-          ref: ${GITHUB_REF}
-        contextDir: "thoth-pylint"
-      strategy:
-        type: Docker
-        dockerStrategy:
-          dockerfilePath: Dockerfile
-          from:
-            kind: "ImageStreamTag"
-            name: "thoth-python36:fedora28"
+            name: "s2i-thoth-ubi8-py36:v0.1.0"
       triggers:
         - type: ImageChange
           imageChange: {}
@@ -240,45 +99,7 @@ objects:
           dockerfilePath: Dockerfile
           from:
             kind: "ImageStreamTag"
-            name: "thoth-python36:ubi8"
-      triggers:
-        - type: ImageChange
-          imageChange: {}
-
-
-  - kind: BuildConfig
-    apiVersion: v1
-    metadata:
-      labels:
-        app: "zuul"
-        component: "infrastructure"
-      name: "thoth-pytest-fedora28"
-    spec:
-      resources:
-        requests:
-          memory: "1Gi"
-          cpu: "1"
-        limits:
-          memory: "1Gi"
-          cpu: "1"
-      output:
-        to:
-          kind: ImageStreamTag
-          name: "thoth-pytest:fedora28"
-      runPolicy: Serial
-      source:
-        type: Git
-        git:
-          uri: "${GITHUB_URL}"
-          ref: ${GITHUB_REF}
-        contextDir: "thoth-pytest"
-      strategy:
-        type: Docker
-        dockerStrategy:
-          dockerfilePath: Dockerfile
-          from:
-            kind: "ImageStreamTag"
-            name: "thoth-python36:fedora28"
+            name: "s2i-thoth-ubi8-py36:v0.1.0"
       triggers:
         - type: ImageChange
           imageChange: {}
@@ -315,11 +136,10 @@ objects:
           dockerfilePath: Dockerfile
           from:
             kind: "ImageStreamTag"
-            name: "thoth-python36:ubi8"
+            name: "s2i-thoth-ubi8-py36:v0.1.0"
       triggers:
         - type: ImageChange
           imageChange: {}
-
 
   - kind: BuildConfig
     apiVersion: v1
@@ -352,5 +172,5 @@ objects:
         dockerStrategy:
           dockerfilePath: Dockerfile
       triggers:
-      - type: ImageChange
-        imageChange: {}
+        - type: ImageChange
+          imageChange: {}
