--- a/thoth-coala-ubi8/Dockerfile
+++ b/thoth-coala-ubi8/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/thoth-station/s2i-thoth-ubi8-py36:v0.1.0
+FROM quay.io/thoth-station/s2i-thoth-ubi8-py36:v0.4.0
 
 ENV SUMMARY="Thoth's toolchain for Coala linting." \
     DESCRIPTION="Thoth's toolchain for Coala linting."
@@ -8,7 +8,8 @@ LABEL summary="$SUMMARY" \
       io.k8s.description="$DESCRIPTION" \
       io.k8s.display-name="Thoth Python 3.6-ubi8 Coala" \
       io.openshift.tags="python,python36,coala" \
-      name="thoth-station/thoth-coala:ubi8"
+      name="thoth-station/thoth-coala:ubi8" \
+      version="0.9.4"
 
 USER 0
 COPY ./ /tmp/src-thoth-coala
