--- a/thoth-coala-ubi8/requirements.txt
+++ b/thoth-coala-ubi8/requirements.txt
@@ -2,12 +2,12 @@
 alabaster==0.7.12
 appdirs==1.4.3
 astroid==1.6.6
-attrs==19.1.0
+attrs==19.3.0
 autoflake==0.6.6
 autopep8==1.4.4
 babel==2.7.0
 bandit==1.6.2
-certifi==2019.6.16
+certifi==2019.9.11
 chardet==3.0.4
 click==6.6
 cmakelint==1.4.1
@@ -18,35 +18,37 @@ colorama==0.3.9
 colorlog==2.10.0
 cppclean==0.12
 cpplint==1.4.4
-decorator==4.4.0
+decorator==4.4.1
 dennis==0.9
 dependency-management==0.4.0
 docopt==0.6.2
 docutils==0.15.2
 eradicate==0.1.6
-future==0.17.1
-gitdb2==2.0.5
-gitpython==3.0.2
+future==0.18.2
+gitdb2==2.0.6
+gitpython==3.0.4
 guess-language-spirit==0.5.3
 html-linter==0.3.0
 idna==2.8
 imagesize==1.1.0
+importlib-metadata==0.23
 ipython-genutils==0.2.0
 isort==4.3.21
-jinja2==2.10.1
-jsonschema==3.0.2
-jupyter-core==4.5.0
-lazy-object-proxy==1.4.2
+jinja2==2.10.3
+jsonschema==3.1.1
+jupyter-core==4.6.1
+lazy-object-proxy==1.4.3
 libclang-py3==3.4.0
 mando==0.3.3
 markupsafe==1.1.1
 mccabe==0.6.1
+more-itertools==7.2.0
 munkres3==1.0.5.5
 mypy-lang==0.4.6
 nbformat==4.4.0
 nltk==3.4.5
-packaging==19.1
-pbr==5.4.2
+packaging==19.2
+pbr==5.4.3
 polib==1.1.0
 proselint==0.7.0
 pycodestyle==2.5.0
@@ -54,11 +56,11 @@ pydocstyle==1.1.1
 pyflakes==1.4.0
 pygments==2.4.2
 pylint==1.9.5
-pyparsing==2.4.2
+pyparsing==2.4.5
 pyprint==0.2.6
 pyroma==2.2
-pyrsistent==0.15.4
-pytz==2019.2
+pyrsistent==0.15.5
+pytz==2019.3
 pyyaml==3.13
 radon==1.4.0
 requests==2.22.0
@@ -67,17 +69,18 @@ rstcheck==2.2
 safety==0.5.1
 sarge==0.1.5.post0
 scspell3k==2.2
-six==1.12.0
+six==1.13.0
 smmap2==2.0.5
-snowballstemmer==1.9.0
+snowballstemmer==2.0.0
 sphinx==1.4.9
-stevedore==1.30.1
+stevedore==1.31.0
 template-remover==0.1.9
 termcolor==1.1.0
-traitlets==4.3.2
+traitlets==4.3.3
 unidiff==0.5.5
-urllib3==1.25.3
+urllib3==1.25.7
 vulture==0.10
 wrapt==1.11.2
 yamllint==1.6.1
 yapf==0.14.0
+zipp==0.6.0
