--- a/thoth-mypy-ubi8/requirements.txt
+++ b/thoth-mypy-ubi8/requirements.txt
@@ -1,9 +1,9 @@
 -i https://pypi.org/simple
-astroid==2.2.5
+astroid==2.3.3
 isort==4.3.21
-lazy-object-proxy==1.4.2
+lazy-object-proxy==1.4.3
 mccabe==0.6.1
-pylint==2.3.1
-six==1.12.0
-typed-ast==1.4.0 ; implementation_name == 'cpython'
+pylint==2.4.3
+six==1.13.0
+typed-ast==1.4.0 ; implementation_name == 'cpython' and python_version < '3.8'
 wrapt==1.11.2
