--- a/thoth-pytest-ubi8/requirements.txt
+++ b/thoth-pytest-ubi8/requirements.txt
@@ -1,15 +1,15 @@
 -i https://pypi.org/simple
 atomicwrites==1.3.0
-attrs==19.1.0
-coverage==4.5.3
-importlib-metadata==0.18
-more-itertools==7.1.0 ; python_version > '2.7'
-packaging==19.0
-pluggy==0.12.0
+attrs==19.3.0
+coverage==4.5.4
+importlib-metadata==0.23 ; python_version < '3.8'
+more-itertools==7.2.0
+packaging==19.2
+pluggy==0.13.0
 py==1.8.0
-pyparsing==2.4.0
-pytest-cov==2.7.1
-pytest==4.6.3
-six==1.12.0
+pyparsing==2.4.5
+pytest-cov==2.8.1
+pytest==5.2.2
+six==1.13.0
 wcwidth==0.1.7
-zipp==0.5.1
+zipp==0.6.0
