Installed remark-lint to support remark-cli for MarkDownBear
Signed-off-by: Harshad Reddy Nalla <hnalla@redhat.com>

--- a/thoth-coala-ubi8/Dockerfile
+++ b/thoth-coala-ubi8/Dockerfile
@@ -16,7 +16,7 @@ COPY ./ /tmp/src-thoth-coala
 COPY ./root/ /
 
 RUN yum install -y python2 && \
-    npm install -g remark-cli && \
+    npm install -g remark-cli remark-lint && \
     pip3 install --requirement /tmp/src-thoth-coala/requirements.txt
 
 USER ${USERID}
