--- a/thoth-coala/Dockerfile
+++ b/thoth-coala/Dockerfile
@@ -16,7 +16,7 @@ RUN DEINSTALL_PKGS="gd-devel openssl-devel zlib-devel libcurl-devel libxml2-deve
     make autoconf automake bzip2 gcc-c++ patch gdb procps-ng unzip wget" && \
     chmod 777 -R /tmp/src-thoth-coala && \
     pushd /tmp/src-thoth-coala && \
-    npm install -g remark-cli && \
+    npm install -g remark-cli remark-lint && \
     pip3 install --requirement requirements.txt && \
     dnf remove -y $DEINSTALL_PKGS
 
