--- a/thoth-coala-ubi8/requirements.txt
+++ b/thoth-coala-ubi8/requirements.txt
@@ -4,10 +4,10 @@ appdirs==1.4.3
 astroid==1.6.6
 attrs==19.3.0
 autoflake==0.6.6
-autopep8==1.4.4
-babel==2.7.0
+autopep8==1.5
+babel==2.8.0
 bandit==1.6.2
-certifi==2019.9.11
+certifi==2019.11.28
 chardet==3.0.4
 click==6.6
 cmakelint==1.4.1
@@ -17,70 +17,69 @@ coala==0.11.0
 colorama==0.3.9
 colorlog==2.10.0
 cppclean==0.12
-cpplint==1.4.4
-decorator==4.4.1
+cpplint==1.4.5
+decorator==4.4.2
 dennis==0.9
 dependency-management==0.4.0
 docopt==0.6.2
-docutils==0.15.2
+docutils==0.16
 eradicate==0.1.6
 future==0.18.2
-gitdb2==2.0.6
-gitpython==3.0.4
+gitdb==4.0.2
+gitpython==3.1.0
 guess-language-spirit==0.5.3
 html-linter==0.3.0
-idna==2.8
-imagesize==1.1.0
-importlib-metadata==0.23
+idna==2.9
+imagesize==1.2.0
+importlib-metadata==1.5.0 ; python_version < '3.8'
 ipython-genutils==0.2.0
 isort==4.3.21
-jinja2==2.10.3
-jsonschema==3.1.1
-jupyter-core==4.6.1
+jinja2==2.11.1
+jsonschema==3.2.0
+jupyter-core==4.6.3
 lazy-object-proxy==1.4.3
 libclang-py3==3.4.0
 mando==0.3.3
 markupsafe==1.1.1
 mccabe==0.6.1
-more-itertools==7.2.0
 munkres3==1.0.5.5
 mypy-lang==0.4.6
 nbformat==4.4.0
 nltk==3.4.5
-packaging==19.2
-pbr==5.4.3
+packaging==20.3
+pbr==5.4.4
 polib==1.1.0
 proselint==0.7.0
 pycodestyle==2.5.0
 pydocstyle==1.1.1
 pyflakes==1.4.0
-pygments==2.4.2
+pygments==2.5.2
 pylint==1.9.5
-pyparsing==2.4.5
+pyparsing==2.4.6
 pyprint==0.2.6
 pyroma==2.2
-pyrsistent==0.15.5
+pyrsistent==0.15.7
 pytz==2019.3
 pyyaml==3.13
 radon==1.4.0
-requests==2.22.0
+requests==2.23.0
 restructuredtext-lint==1.0.1
 rstcheck==2.2
 safety==0.5.1
 sarge==0.1.5.post0
 scspell3k==2.2
-six==1.13.0
-smmap2==2.0.5
+six==1.14.0
+smmap==3.0.1
 snowballstemmer==2.0.0
 sphinx==1.4.9
-stevedore==1.31.0
+stevedore==1.32.0
 template-remover==0.1.9
 termcolor==1.1.0
 traitlets==4.3.3
 unidiff==0.5.5
-urllib3==1.25.7
+urllib3==1.25.8
 vulture==0.10
-wrapt==1.11.2
+wrapt==1.12.0
 yamllint==1.6.1
 yapf==0.14.0
-zipp==0.6.0
+zipp==3.1.0
