Use system pip when installing dependencies

--- a/thoth-coala-ubi8/Dockerfile
+++ b/thoth-coala-ubi8/Dockerfile
@@ -17,7 +17,7 @@ COPY ./root/ /
 
 RUN yum install -y python2 && \
     npm install -g remark-cli remark-lint && \
-    pip3 install --requirement /tmp/src-thoth-coala/requirements.txt
+    /usr/bin/pip3 install --requirement /tmp/src-thoth-coala/requirements.txt
 
 USER ${USERID}
 
