--- a/thoth-pytest/Dockerfile
+++ b/thoth-pytest/Dockerfile
@@ -15,6 +15,6 @@ COPY ./ /tmp/src-thoth-pytest
 RUN dnf install -y --setopt=tsflags=nodocs @development-tools python3-devel && \
     chmod 777 -R /tmp/src-thoth-pytest && \
     pushd /tmp/src-thoth-pytest && \
-    pip3 install --requirement requirements.txt
+    /usr/bin/pip3 install --requirement requirements.txt
 
 USER ${USERID}
