--- a/thoth-pytest-f31-py37/Dockerfile
+++ b/thoth-pytest-f31-py37/Dockerfile
@@ -14,6 +14,6 @@ LABEL summary="$SUMMARY" \
 USER 0
 COPY ./ /tmp/src-thoth-pytest
 RUN yum install -y python2 && \
-    pip3 install --requirement /tmp/src-thoth-pytest/requirements.txt
+    /usr/bin/pip3 install --requirement /tmp/src-thoth-pytest/requirements.txt
 
 USER ${USERID}
