--- a/thoth-precommit-ubi8/Dockerfile
+++ b/thoth-precommit-ubi8/Dockerfile
@@ -6,12 +6,12 @@ ENV SUMMARY="Thoth's toolchain for running pre-commit hooks." \
 LABEL summary="$SUMMARY" \
       description="$DESCRIPTION" \
       io.k8s.description="$DESCRIPTION" \
-      io.k8s.display-name="Thoth Python 3.6-fedora28 Pre-Commit" \
+      io.k8s.display-name="Thoth Python 3.6-ubi8 Pre-Commit" \
       io.openshift.tags="python,python36,pre-commit" \
-      name="thoth-station/thoth-pre-commit:fedora28"
+      name="thoth-station/thoth-pre-commit:ubi8"
 
 USER 0
 COPY ./ /tmp/src-thoth-precommit
-RUN /usr/bin/pip3 install --requirement /tmp/src-thoth-pylint/requirements.txt
+RUN /usr/bin/pip3 install --requirement /tmp/src-thoth-precommit/requirements.txt
 
 USER ${USERID}
