--- a/thoth-black-ubi8/requirements.txt
+++ b/thoth-black-ubi8/requirements.txt
@@ -1,9 +1,11 @@
 -i https://pypi.org/simple
-appdirs==1.4.3
-attrs==19.3.0
-black==19.10b0
-click==7.0
-pathspec==0.7.0
-regex==2020.2.20
-toml==0.10.0
+appdirs==1.4.4
+black==20.8b1
+click==7.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+dataclasses==0.7; python_version < '3.7'
+mypy-extensions==0.4.3
+pathspec==0.8.0
+regex==2020.9.27
+toml==0.10.1
 typed-ast==1.4.1
+typing-extensions==3.7.4.3
