--- a/thoth-mypy-ubi8/requirements.txt
+++ b/thoth-mypy-ubi8/requirements.txt
@@ -1,9 +1,10 @@
 -i https://pypi.org/simple
-astroid==2.3.3
-isort==4.3.21
-lazy-object-proxy==1.4.3
+astroid==2.4.2; python_version >= '3.5'
+isort==5.5.4; python_version >= '3.6' and python_version < '4.0'
+lazy-object-proxy==1.4.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 mccabe==0.6.1
-pylint==2.4.4
-six==1.14.0
-typed-ast==1.4.1 ; implementation_name == 'cpython' and python_version < '3.8'
-wrapt==1.11.2
+pylint==2.6.0
+six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+toml==0.10.1
+typed-ast==1.4.1; python_version < '3.8' and implementation_name == 'cpython'
+wrapt==1.12.1
