--- a/thoth-precommit-ubi-py38/requirements.txt
+++ b/thoth-precommit-ubi-py38/requirements.txt
@@ -3,10 +3,10 @@ appdirs==1.4.4
 cfgv==3.2.0; python_full_version >= '3.6.1'
 distlib==0.3.1
 filelock==3.0.12
-identify==1.5.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+identify==1.5.5; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 nodeenv==1.5.0
 pre-commit==2.7.1
 pyyaml==5.3.1
-six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 toml==0.10.1
-virtualenv==20.0.31; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+virtualenv==20.0.32; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
