--- a/thoth-pytest-ubi8/requirements.txt
+++ b/thoth-pytest-ubi8/requirements.txt
@@ -1,14 +1,14 @@
 -i https://pypi.org/simple
-attrs==19.3.0
-coverage==5.0.3
-importlib-metadata==1.5.0 ; python_version < '3.8'
-more-itertools==8.2.0
-packaging==20.3
-pluggy==0.13.1
-py==1.8.1
-pyparsing==2.4.6
-pytest-cov==2.8.1
-pytest==5.3.5
-six==1.14.0
-wcwidth==0.1.8
-zipp==3.1.0
+attrs==20.2.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+coverage==5.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+importlib-metadata==2.0.0; python_version < '3.8'
+iniconfig==1.0.1
+packaging==20.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pluggy==0.13.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+py==1.9.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pytest-cov==2.10.1
+pytest==6.1.1
+six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+toml==0.10.1
+zipp==3.3.0; python_version >= '3.6'
