:arrow_up: updated pip and base image for the toolchains
Signed-off-by: Harshad Reddy Nalla <hnalla@redhat.com>

--- a/thoth-black-ubi8/Dockerfile
+++ b/thoth-black-ubi8/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/thoth-station/s2i-thoth-ubi8-py36:v0.18.0
+FROM quay.io/thoth-station/s2i-thoth-ubi8-py36:v0.20.1
 
 ENV SUMMARY="Thoth's toolchain for Black." \
     DESCRIPTION="Thoth's toolchain for Black."
@@ -9,10 +9,12 @@ LABEL summary="$SUMMARY" \
     io.k8s.display-name="Thoth Python 3.6-ubi8 Black" \
     io.openshift.tags="python,python36,black" \
     name="thoth-station/thoth-black:ubi8" \
-    version="0.12.0"
+    version="0.12.1"
 
 USER 0
 COPY ./ /tmp/src-thoth-black
-RUN pip3 install --requirement /tmp/src-thoth-black/requirements.txt
+RUN  \
+  /usr/bin/pip3 install --upgrade pip3 &&\
+  /usr/bin/pip3 install --requirement /tmp/src-thoth-black/requirements.txt
 
 USER ${USERID}
