--- a/thoth-precommit-ubi8/Dockerfile
+++ b/thoth-precommit-ubi8/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/thoth-station/s2i-thoth-ubi8-py36:v0.15.0
+FROM quay.io/thoth-station/s2i-thoth-ubi8-py36:v0.20.1
 
 ENV SUMMARY="Thoth's toolchain for running pre-commit hooks." \
     DESCRIPTION="Thoth's toolchain for running pre-commit hooks."
@@ -12,6 +12,8 @@ LABEL summary="$SUMMARY" \
 
 USER 0
 COPY ./ /tmp/src-thoth-precommit
-RUN /usr/bin/pip3 install --requirement /tmp/src-thoth-precommit/requirements.txt
+RUN  \
+  /usr/bin/pip3 install --upgrade pip &&\
+  /usr/bin/pip3 install --requirement /tmp/src-thoth-precommit/requirements.txt
 
 USER ${USERID}
