--- a/thoth-precommit-ubi-py38/Dockerfile
+++ b/thoth-precommit-ubi-py38/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/thoth-station/s2i-thoth-ubi8-py38:v0.18.0
+FROM quay.io/thoth-station/s2i-thoth-ubi8-py38:v0.21.1
 
 ENV SUMMARY="Thoth's toolchain for running pre-commit hooks." \
     DESCRIPTION="Thoth's toolchain for running pre-commit hooks."
@@ -9,10 +9,12 @@ LABEL summary="$SUMMARY" \
     io.k8s.display-name="Thoth Python 3.8-ubi8 Pre-Commit" \
     io.openshift.tags="python,python38,pre-commit" \
     name="thoth-station/thoth-pre-commit:ubi8" \
-    version="0.12.0"
+    version="0.12.1"
 
 USER 0
 COPY ./ /tmp/src-thoth-precommit
-RUN /usr/bin/pip3 install --requirement /tmp/src-thoth-precommit/requirements.txt
+RUN  \
+  /usr/bin/pip3 install --upgrade pip &&\
+  /usr/bin/pip3 install --requirement /tmp/src-thoth-precommit/requirements.txt
 
 USER ${USERID}
