:arrow_up: updated system pip for pytest and pre-commit
Signed-off-by: Harshad Reddy Nalla <hnalla@redhat.com>

--- a/thoth-precommit-ubi8/Dockerfile
+++ b/thoth-precommit-ubi8/Dockerfile
@@ -13,6 +13,7 @@ LABEL summary="$SUMMARY" \
 USER 0
 COPY ./ /tmp/src-thoth-precommit
 RUN  \
+  pip install --upgrade pip &&\
   /usr/bin/pip3 install --upgrade pip &&\
   /usr/bin/pip3 install --requirement /tmp/src-thoth-precommit/requirements.txt
 
