use python based reference while pip install for non default python
Signed-off-by: Harshad Reddy Nalla <hnalla@redhat.com>

--- a/thoth-precommit-ubi-py38/Dockerfile
+++ b/thoth-precommit-ubi-py38/Dockerfile
@@ -15,7 +15,7 @@ USER 0
 COPY ./ /tmp/src-thoth-precommit
 RUN  \
   pip install --upgrade pip &&\
-  /usr/bin/pip3 install --upgrade pip &&\
-  /usr/bin/pip3 install --requirement /tmp/src-thoth-precommit/requirements.txt
+  /usr/bin/python3 -m pip install --upgrade pip &&\
+  /usr/bin/python3 -m pip install --requirement /tmp/src-thoth-precommit/requirements.txt
 
 USER ${USERID}
