--- a/thoth-precommit/Dockerfile
+++ b/thoth-precommit/Dockerfile
@@ -1,23 +1,21 @@
-FROM quay.io/aicoe/thoth-python36:fedora28
+FROM quay.io/thoth-station/s2i-thoth-ubi8-py38:v0.20.1
 
 ENV SUMMARY="Thoth's toolchain for running pre-commit hooks." \
     DESCRIPTION="Thoth's toolchain for running pre-commit hooks."
 
 LABEL summary="$SUMMARY" \
-      description="$DESCRIPTION" \
-      io.k8s.description="$DESCRIPTION" \
-      io.k8s.display-name="Thoth Python 3.6-fedora28 Pre-Commit" \
-      io.openshift.tags="python,python36,pre-commit" \
-      name="thoth-station/thoth-pre-commit:fedora28"
+    description="$DESCRIPTION" \
+    io.k8s.description="$DESCRIPTION" \
+    io.k8s.display-name="Thoth Python 3.8-ubi8 Pre-Commit" \
+    io.openshift.tags="python,python38,pre-commit" \
+    name="thoth-station/thoth-pre-commit:ubi8" \
+    version="0.12.2"
 
 USER 0
 COPY ./ /tmp/src-thoth-precommit
-RUN DEINSTALL_PKGS="gd-devel openssl-devel zlib-devel libcurl-devel libxml2-devel libxslt-devel \
-    make autoconf automake bzip2 gcc-c++ patch gdb procps-ng unzip wget" && \
-    chmod 777 -R /tmp/src-thoth-precommit && \
-    pushd /tmp/src-thoth-precommit && \
-    npm install -g remark-cli remark-lint && \
-    pip3 install --requirement requirements.txt && \
-    dnf remove -y $DEINSTALL_PKGS
+RUN  \
+  pip install --upgrade pip &&\
+  /usr/bin/python3 -m pip install --upgrade pip &&\
+  /usr/bin/python3 -m pip install --requirement /tmp/src-thoth-precommit/requirements.txt
 
 USER ${USERID}
