--- a/thoth-pytest-ubi8-py38/requirements.txt
+++ b/thoth-pytest-ubi8-py38/requirements.txt
@@ -6,17 +6,16 @@
 #
 
 -i https://pypi.org/simple
-attrs==20.3.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-coverage==5.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+attrs==21.2.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+coverage==5.5; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 iniconfig==1.1.1
 mypy-extensions==0.4.3
-mypy==0.800
-packaging==20.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+mypy==0.910
+packaging==21.0; python_version >= '3.6'
 pluggy==0.13.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 py==1.10.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pytest-cov==2.11.1
-pytest==6.2.2
+pytest-cov==2.12.1
+pytest==6.2.4
 toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-typed-ast==1.4.2
-typing-extensions==3.7.4.3
+typing-extensions==3.10.0.0
